terminado el quienes somos y el index, falta poner unas imagenes al productos y ya estaria terminado

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     </div>
 </div>
-    
+    <div class="grid-container-index">
     <div class="control">
         <h3 class="titulopromo">Nustras promociones</h3>
         <img src="https://cdn.discordapp.com/attachments/556970734501494806/960613866046369872/unknown.png" class="imagen" alt="">
@@ -92,6 +92,7 @@
         <img src="https://cdn.discordapp.com/attachments/556970734501494806/961039588615421972/unknown.png" class="imagen2" alt="">
         <img src="https://cdn.discordapp.com/attachments/556970734501494806/961040417024012288/unknown.png" class="imagen2" alt="">
         <div><a href="#" class="pedido" >Hacer pedido</a></div>
+    </div>
     </div>
     
 </section>
