terminado formulario, quienes somos, casi productos y falta configurar mejor el index

--- a/index.html
+++ b/index.html
@@ -81,18 +81,22 @@
     </div>
 </div>
     <div class="grid-container-index">
-    <div class="control">
-        <h3 class="titulopromo">Nustras promociones</h3>
-        <img src="https://cdn.discordapp.com/attachments/556970734501494806/960613866046369872/unknown.png" class="imagen" alt="">
-        <img src="https://cdn.discordapp.com/attachments/556970734501494806/960613866046369872/unknown.png" class="imagen" alt="">
-        <img src="https://cdn.discordapp.com/attachments/556970734501494806/960613866046369872/unknown.png" class="imagen" alt="">
-        <ul class="ulll"><a href="C:\Users\gaspar\Desktop\primeraentrega-final\pages\productos.html" class="aproductos">Ir a promociones</a></ul>
-        <hr>
-        <h5>Quieres contactarnos y hacer tu pedido?</h5>
-        <img src="https://cdn.discordapp.com/attachments/556970734501494806/961039588615421972/unknown.png" class="imagen2" alt="">
-        <img src="https://cdn.discordapp.com/attachments/556970734501494806/961040417024012288/unknown.png" class="imagen2" alt="">
-        <div><a href="#" class="pedido" >Hacer pedido</a></div>
+    <div class="tall2 item-index">
+            <div class="control">
+                <h3 class="titulopromo">Nustras promociones</h3>
+                <img src="https://cdn.discordapp.com/attachments/556970734501494806/960613866046369872/unknown.png" class="imagen" alt="">
+                <img src="https://cdn.discordapp.com/attachments/556970734501494806/960613866046369872/unknown.png" class="imagen" alt="">
+                <img src="https://cdn.discordapp.com/attachments/556970734501494806/960613866046369872/unknown.png" class="imagen" alt="">
+                <ul class="ulll"><a href="C:\Users\gaspar\Desktop\primeraentrega-final\pages\productos.html" class="aproductos">Ir a promociones</a></ul>
+        </div>
     </div>
+        <div class="tall2">
+            <div class="control">
+            <h5>Quieres contactarnos y hacer tu pedido?</h5>
+            <img src="https://cdn.discordapp.com/attachments/556970734501494806/961039588615421972/unknown.png" class="imagen2" alt="">
+            <img src="https://cdn.discordapp.com/attachments/556970734501494806/961040417024012288/unknown.png" class="imagen2" alt="">
+            <div><a href="#" class="pedido" >Hacer pedido</a></div>
+        </div>
     </div>
     
 </section>
